--- a/dmu31/dmu31_Field_overviews/CDFS-SWIRE.html
+++ b/dmu31/dmu31_Field_overviews/CDFS-SWIRE.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 25.88011968592857 mag, or 0.16 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 27.195517525796056 mag, or 0.05 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.257882296273557 mag, or 0.72 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.488506069243819 mag, or 2315.25 uJy</td>
   </tr>
   
 </table>
