--- a/dmu31/dmu31_Field_overviews/ELAIS-N1.html
+++ b/dmu31/dmu31_Field_overviews/ELAIS-N1.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 28.583673338839482 mag, or 0.01 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 23.954237658949758 mag, or 0.95 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.08638898396955 mag, or 0.84 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.155768010469508 mag, or 3145.52 uJy</td>
   </tr>
   
 </table>
