--- a/dmu31/dmu31_Field_overviews/HDF-N.html
+++ b/dmu31/dmu31_Field_overviews/HDF-N.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 23.548825920994965 mag, or 1.38 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 27.00268011713917 mag, or 0.06 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 26.314956108903694 mag, or 0.11 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.466553627188894 mag, or 2362.54 uJy</td>
   </tr>
   
 </table>
