--- a/dmu31/dmu31_Field_overviews/Herschel-Stripe-82.html
+++ b/dmu31/dmu31_Field_overviews/Herschel-Stripe-82.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 25.875602174237848 mag, or 0.16 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 21.153676210736457 mag, or 12.55 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 22.726087120777983 mag, or 2.95 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 14.236923396983656 mag, or 7332.14 uJy</td>
   </tr>
   
 </table>
