--- a/dmu31/dmu31_Field_overviews/SPIRE-NEP.html
+++ b/dmu31/dmu31_Field_overviews/SPIRE-NEP.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 23.339505325220948 mag, or 1.68 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB nan mag, or nan uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB nan mag, or nan uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.37025581052169 mag, or 2581.65 uJy</td>
   </tr>
   
 </table>
