--- a/dmu31/dmu31_Field_overviews/XMM-LSS.html
+++ b/dmu31/dmu31_Field_overviews/XMM-LSS.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 27.48682100905527 mag, or 0.04 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.12299352716925 mag, or 0.81 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.073915315574574 mag, or 0.85 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.392696162107576 mag, or 2528.84 uJy</td>
   </tr>
   
 </table>
