--- a/dmu31/dmu31_Field_overviews/AKARI-NEP.html
+++ b/dmu31/dmu31_Field_overviews/AKARI-NEP.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 23.33192129469284 mag, or 1.69 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 23.96286921829759 mag, or 0.94 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 22.958605086308133 mag, or 2.38 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 14.656043215311378 mag, or 4984.05 uJy</td>
   </tr>
   
 </table>
