--- a/dmu31/dmu31_Field_overviews/ELAIS-S1.html
+++ b/dmu31/dmu31_Field_overviews/ELAIS-S1.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 25.81450210762666 mag, or 0.17 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 21.215116392017812 mag, or 11.86 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.139353330699386 mag, or 0.8 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.208652820914942 mag, or 2995.98 uJy</td>
   </tr>
   
 </table>
