--- a/dmu31/dmu31_Field_overviews/GAMA-15.html
+++ b/dmu31/dmu31_Field_overviews/GAMA-15.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 26.195515622956812 mag, or 0.12 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 21.70914756712407 mag, or 7.52 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB nan mag, or nan uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 14.629590545745899 mag, or 5106.98 uJy</td>
   </tr>
   
 </table>
