--- a/dmu31/dmu31_Field_overviews/HATLAS-NGP.html
+++ b/dmu31/dmu31_Field_overviews/HATLAS-NGP.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 23.78978441590197 mag, or 1.11 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 21.238658900417526 mag, or 11.6 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB nan mag, or nan uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 14.615270010293962 mag, or 5174.78 uJy</td>
   </tr>
   
 </table>
