--- a/dmu31/dmu31_Field_overviews/Lockman-SWIRE.html
+++ b/dmu31/dmu31_Field_overviews/Lockman-SWIRE.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 28.480274086380625 mag, or 0.01 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.057969702913958 mag, or 0.86 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.1430783889791 mag, or 0.8 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.485292977953556 mag, or 2322.11 uJy</td>
   </tr>
   
 </table>
