--- a/dmu31/dmu31_Field_overviews/xFLS.html
+++ b/dmu31/dmu31_Field_overviews/xFLS.html
@@ -40,7 +40,7 @@
 
 
 
-<table style="width:400px">
+<table style="width:700px">
   <tr>
     <th>Key stats:</th>
     <th></th>
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 24.4952397292223 mag, or 0.58 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB nan mag, or nan uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 21.726382432463616 mag, or 7.4 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>PLACEHOLDER</td>
+    <td>AB 15.108103967265826 mag, or 3286.69 uJy</td>
   </tr>
   
 </table>
