--- a/dmu31/dmu31_Field_overviews/Bootes.html
+++ b/dmu31/dmu31_Field_overviews/Bootes.html
@@ -11,7 +11,7 @@
 </a>
 <h1>Overview of HELP field Bootes</h1>
 <p>This HELP field is defined by SPIRE coverage of the Bootes field. </p>
-<p>Click <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/adql/query/form?__nevow_form__=genForm&query=SELECT%20TOP%2010%20help_id%2C%20redshift%2C%20f_spire_250%2C%20f_best_g%2C%20f_best_ks%2C%20f_irac_i1%2C%20cigale_sfr%20from%20help_a_list.main%20WHERE%20cigale_sfr%20%3E1%20AND%20field%3D%27Bootes%27&_TIMEOUT=5&_FORMAT=HTML&submit=Go">here</a> to get a simple <a href="https://herschel-vos.phys.sussex.ac.uk/">VOX</a> query to get you started.</p>
+<p>Click <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/adql/query/form?__nevow_form__=genForm&query=SELECT%20TOP%2010%20help_id%2C%20redshift%2C%20f_spire_250%2C%20f_best_g%2C%20f_best_ks%2C%20f_irac_i1%2C%20cigale_sfr%20from%20help_a_list.main%20WHERE%20cigale_sfr%20%3E1%20AND%20field%3D%27Bootes%27&_TIMEOUT=5&_FORMAT=HTML&submit=Go">here</a> to get a simple <a href="https://herschel-vos.phys.sussex.ac.uk/">VOX</a> query to get you started. To query the flux columns use f_best_g, ferr_best_g, m_best_g, and merr_best_g for the lowest error flux, flux error, AB magnitude, and magnitude error measurement available. All the main broadband optical and near infrared fluxes are available by replacing g with u, g, r, i, z, y, j, h, k, or ks. A full description of all columns is available <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/dc_tables/show/tableinfo/help_a_list.main">here</a>. You can also query the <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/dc_tables/show/tableinfo/herschelhelp.main">full table</a> with all specific bands available.</p>
 
 
 
@@ -68,19 +68,19 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>AB 25.141130119454537 mag, or 0.32 uJy</td>
+    <td>AB 25.14 mag, or 0.32 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
-    <td>AB 22.164297204140816 mag, or 4.95 uJy</td>
+    <td>AB 22.16 mag, or 4.95 uJy</td>
   </tr>
       <tr>
     <td>Median IRAC i1 depth</td>
-    <td>AB 23.554317275552926 mag, or 1.37 uJy</td>
+    <td>AB 23.55 mag, or 1.37 uJy</td>
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>AB 15.121589841230197 mag, or 3246.12 uJy</td>
+    <td>AB 15.12 mag, or 3246.12 uJy</td>
   </tr>
   
 </table>
@@ -89,14 +89,14 @@
 
 
 <ul>
-  <li>The reduced "best photometry" table: <a href="http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_AllSky/data/Bootes_best_phot_20201111.fits">http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_AllSky/data/Bootes_best_phot_20201111.fits</a></li>
-  <li>The full masterlist table: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu32/dmu32_Bootes/data/Bootes_20190701.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu32/dmu32_Bootes/data/Bootes_20190701.fits</a></li>
-  <li>The blind source list: <a href="http://hedam.lam.fr/HELP/dataproducts/dmu22/dmu22_Bootes/data/dmu22_XID+SPIRE_Bootes_BLIND_Matched_MF.fits">http://hedam.lam.fr/HELP/dataproducts/dmu22/dmu22_Bootes/data/dmu22_XID+SPIRE_Bootes_BLIND_Matched_MF.fits</a></li>
-  <li>SPIRE imaging at 250, 350, and 500 microns:<a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE250_v1.0.fits">http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE250_v1.0.fits</a>, <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE350_v1.0.fits">http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE350_v1.0.fits</a>, <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE500_v1.0.fits">http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE500_v1.0.fits</a></li>
-  <li>Full photo-z table: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu24/dmu24_Bootes/data/Bootes_opt_spitzer_merged_vac_opt3as_irac4as_all_public_with_help_id.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu24/dmu24_Bootes/data/Bootes_opt_spitzer_merged_vac_opt3as_irac4as_all_public_with_help_id.fits</a></li>
-  <li>Full CIGALE table: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu28/dmu28_Bootes/data/zphot/HELP_final_results.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu28/dmu28_Bootes/data/zphot/HELP_final_results.fits</a></li>
-  <li>The CIGALE SEDs: <a href="http://hedam.lam.fr/HELP/dataproducts/dmu28/dmu28_Bootes/data/zphot/SEDs/">http://hedam.lam.fr/HELP/dataproducts/dmu28/dmu28_Bootes/data/zphot/SEDs/</a></li>
-  <li>The field definition MOC: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu2/dmu2_field_coverages/Bootes_MOC.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu2/dmu2_field_coverages/Bootes_MOC.fits</a></li>
+  <li>The reduced "best photometry" <a href="http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_AllSky/data/Bootes_best_phot_20201111.fits">table</a>.</li>
+  <li>The full masterlist <a href="http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_Bootes/data/Bootes_20190701.fits">table</a>.</li>
+  <li>The blind source <a href="http://hedam.lam.fr/HELP/dataproducts/dmu22/dmu22_Bootes/data/dmu22_XID+SPIRE_Bootes_BLIND_Matched_MF.fits">table</a>.</li>
+  <li>SPIRE <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE250_v1.0.fits">250 um image</a>, <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE350_v1.0.fits">350 um image</a>, and <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/Bootes_SPIRE500_v1.0.fits">500 um image</a>.</li>
+  <li>Full photo-z <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu24/dmu24_Bootes/data/Bootes_opt_spitzer_merged_vac_opt3as_irac4as_all_public_with_help_id.fits">table</a>.</li>
+  <li>Full CIGALE physical properties <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu28/dmu28_Bootes/data/zphot/HELP_final_results.fits">table</a>.</li>
+  <li>The folder of CIGALE <a href="http://hedam.lam.fr/HELP/dataproducts/dmu28/dmu28_Bootes/data/zphot/SEDs/">SEDs</a>.</li>
+  <li>The field definition <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu2/dmu2_field_coverages/Bootes_MOC.fits">MOC</a>.</li>
   
 </ul>
 
