--- a/dmu31/dmu31_Field_overviews/SPIRE-NEP.html
+++ b/dmu31/dmu31_Field_overviews/SPIRE-NEP.html
@@ -11,7 +11,7 @@
 </a>
 <h1>Overview of HELP field SPIRE-NEP</h1>
 <p>This HELP field is defined by SPIRE coverage of the Spitzer Wide InfraRed Extragalactic (SWIRE) survey coverage of the North Ecliptic Pole (NEP) field.. </p>
-<p>Click <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/adql/query/form?__nevow_form__=genForm&query=SELECT%20TOP%2010%20help_id%2C%20redshift%2C%20f_spire_250%2C%20f_best_g%2C%20f_best_ks%2C%20f_irac_i1%2C%20cigale_sfr%20from%20help_a_list.main%20WHERE%20cigale_sfr%20%3E1%20AND%20field%3D%27SPIRE-NEP%27&_TIMEOUT=5&_FORMAT=HTML&submit=Go">here</a> to get a simple <a href="https://herschel-vos.phys.sussex.ac.uk/">VOX</a> query to get you started.</p>
+<p>Click <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/adql/query/form?__nevow_form__=genForm&query=SELECT%20TOP%2010%20help_id%2C%20redshift%2C%20f_spire_250%2C%20f_best_g%2C%20f_best_ks%2C%20f_irac_i1%2C%20cigale_sfr%20from%20help_a_list.main%20WHERE%20cigale_sfr%20%3E1%20AND%20field%3D%27SPIRE-NEP%27&_TIMEOUT=5&_FORMAT=HTML&submit=Go">here</a> to get a simple <a href="https://herschel-vos.phys.sussex.ac.uk/">VOX</a> query to get you started. To query the flux columns use f_best_g, ferr_best_g, m_best_g, and merr_best_g for the lowest error flux, flux error, AB magnitude, and magnitude error measurement available. All the main broadband optical and near infrared fluxes are available by replacing g with u, g, r, i, z, y, j, h, k, or ks. A full description of all columns is available <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/dc_tables/show/tableinfo/help_a_list.main">here</a>. You can also query the <a href="https://herschel-vos.phys.sussex.ac.uk/__system__/dc_tables/show/tableinfo/herschelhelp.main">full table</a> with all specific bands available.</p>
 
 
 
@@ -68,7 +68,7 @@
   </tr>
       <tr>
     <td>Median g depth</td>
-    <td>AB 23.339505325220948 mag, or 1.68 uJy</td>
+    <td>AB 23.34 mag, or 1.68 uJy</td>
   </tr>
       <tr>
     <td>Median K or Ks depth</td>
@@ -80,7 +80,7 @@
   </tr>
       <tr>
     <td>Median SPIRE 250 depth</td>
-    <td>AB 15.37025581052169 mag, or 2581.65 uJy</td>
+    <td>AB 15.37 mag, or 2581.65 uJy</td>
   </tr>
   
 </table>
@@ -89,14 +89,14 @@
 
 
 <ul>
-  <li>The reduced "best photometry" table: <a href="http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_AllSky/data/SPIRE-NEP_best_phot_20201111.fits">http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_AllSky/data/SPIRE-NEP_best_phot_20201111.fits</a></li>
-  <li>The full masterlist table: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu32/dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu32/dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220.fits</a></li>
-  <li>The blind source list: <a href="http://hedam.lam.fr/HELP/dataproducts/dmu22/dmu22_SPIRE-NEP/data/dmu22_XID+SPIRE_SPIRE-NEP_BLIND_Matched_MF.fits">http://hedam.lam.fr/HELP/dataproducts/dmu22/dmu22_SPIRE-NEP/data/dmu22_XID+SPIRE_SPIRE-NEP_BLIND_Matched_MF.fits</a></li>
-  <li>SPIRE imaging at 250, 350, and 500 microns:<a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE250_v1.0.fits">http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE250_v1.0.fits</a>, <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE350_v1.0.fits">http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE350_v1.0.fits</a>, <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE500_v1.0.fits">http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE500_v1.0.fits</a></li>
-  <li>Full photo-z table: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu24/dmu24_SPIRE-NEP/data/SPIRE-NEP_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu24/dmu24_SPIRE-NEP/data/SPIRE-NEP_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits</a></li>
-  <li>Full CIGALE table: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu28/dmu28_SPIRE-NEP/data/zphot/HELP_final_results.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu28/dmu28_SPIRE-NEP/data/zphot/HELP_final_results.fits</a></li>
-  <li>The CIGALE SEDs: <a href="http://hedam.lam.fr/HELP/dataproducts/dmu28/dmu28_SPIRE-NEP/data/zphot/SEDs/">http://hedam.lam.fr/HELP/dataproducts/dmu28/dmu28_SPIRE-NEP/data/zphot/SEDs/</a></li>
-  <li>The field definition MOC: <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu2/dmu2_field_coverages/SPIRE-NEP_MOC.fits">http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu2/dmu2_field_coverages/SPIRE-NEP_MOC.fits</a></li>
+  <li>The reduced "best photometry" <a href="http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_AllSky/data/SPIRE-NEP_best_phot_20201111.fits">table</a>.</li>
+  <li>The full masterlist <a href="http://hedam.lam.fr/HELP/dataproducts/dmu32/dmu32_SPIRE-NEP/data/SPIRE-NEP_20180220.fits">table</a>.</li>
+  <li>The blind source <a href="http://hedam.lam.fr/HELP/dataproducts/dmu22/dmu22_SPIRE-NEP/data/dmu22_XID+SPIRE_SPIRE-NEP_BLIND_Matched_MF.fits">table</a>.</li>
+  <li>SPIRE <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE250_v1.0.fits">250 um image</a>, <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE350_v1.0.fits">350 um image</a>, and <a href="http://hedam.lam.fr/HELP/dataproducts/dmu19/dmu19_HELP-SPIRE-maps/data/SPIRE-NEP_SPIRE500_v1.0.fits">500 um image</a>.</li>
+  <li>Full photo-z <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu24/dmu24_SPIRE-NEP/data/SPIRE-NEP_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits">table</a>.</li>
+  <li>Full CIGALE physical properties <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu28/dmu28_SPIRE-NEP/data/zphot/HELP_final_results.fits">table</a>.</li>
+  <li>The folder of CIGALE <a href="http://hedam.lam.fr/HELP/dataproducts/dmu28/dmu28_SPIRE-NEP/data/zphot/SEDs/">SEDs</a>.</li>
+  <li>The field definition <a href="http://hedam.lam.fr/HELP/dataproductsdmu_products/dmu2/dmu2_field_coverages/SPIRE-NEP_MOC.fits">MOC</a>.</li>
   
 </ul>
 
